// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`正确渲染BaseInput 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  cursor: pointer;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  line-height: 1.1875rem;
}

.c0 > input {
  padding: 6px 0 7px;
  border: 0px;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  font-size: 1rem;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  color: rgba(0,0,0,0.87);
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  display: block;
  min-width: 0px;
  width: 100%;
  height: 1.1875rem;
}

.c0 > input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input::-ms-clear {
  display: none;
}

.c0 > input:focus {
  outline: 0;
}

.c0 > input:invalid {
  box-shadow: none;
}

.c0 > .sinoui-base-input__clear {
  display: block;
}

.c0:hover > .sinoui-base-input__clear {
  display: block;
}

.c0:hover > .sinoui-base-input__endcomponent {
  display: block;
}

<div
  className="c0 sinoui-base-input__layout"
  data-testid="baseInput"
  onClick={[Function]}
>
  <input
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
</div>
`;

exports[`渲染disabled属性下的BaseInput 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  cursor: default;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  line-height: 1.1875rem;
}

.c0 > input {
  padding: 6px 0 7px;
  border: 0px;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  font-size: 1rem;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  color: rgba(0,0,0,0.38);
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  display: block;
  min-width: 0px;
  width: 100%;
  height: 1.1875rem;
  opacity: 1;
}

.c0 > input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input::-ms-clear {
  display: none;
}

.c0 > input:focus {
  outline: 0;
}

.c0 > input:invalid {
  box-shadow: none;
}

.c0 > .sinoui-base-input__clear {
  display: block;
}

.c0:hover > .sinoui-base-input__clear {
  display: block;
}

.c0:hover > .sinoui-base-input__endcomponent {
  display: block;
}

<div
  className="c0 sinoui-base-input__layout"
  data-testid="baseInput"
  disabled={true}
  onClick={[Function]}
>
  <input
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
</div>
`;

exports[`渲染全宽模式下的BaseInput 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  cursor: pointer;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  line-height: 1.1875rem;
  width: 100%;
}

.c0 > input {
  padding: 6px 0 7px;
  border: 0px;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  font-size: 1rem;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  color: rgba(0,0,0,0.87);
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  display: block;
  min-width: 0px;
  width: 100%;
  height: 1.1875rem;
}

.c0 > input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input::-ms-clear {
  display: none;
}

.c0 > input:focus {
  outline: 0;
}

.c0 > input:invalid {
  box-shadow: none;
}

.c0 > .sinoui-base-input__clear {
  display: block;
}

.c0:hover > .sinoui-base-input__clear {
  display: block;
}

.c0:hover > .sinoui-base-input__endcomponent {
  display: block;
}

<div
  className="c0 sinoui-base-input__layout"
  data-testid="baseInput"
  onClick={[Function]}
>
  <input
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
</div>
`;

exports[`渲染多行输入框 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  cursor: default;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  line-height: 1.1875rem;
}

.c0 > input {
  padding: 6px 0 7px;
  border: 0px;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  font-size: 1rem;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  color: rgba(0,0,0,0.38);
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  display: block;
  min-width: 0px;
  width: 100%;
  height: 1.1875rem;
  opacity: 1;
}

.c0 > input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input::-ms-clear {
  display: none;
}

.c0 > input:focus {
  outline: 0;
}

.c0 > input:invalid {
  box-shadow: none;
}

.c0 > .sinoui-base-input__clear {
  display: block;
}

.c0:hover > .sinoui-base-input__clear {
  display: block;
}

.c0:hover > .sinoui-base-input__endcomponent {
  display: block;
}

.c1 {
  border: 0px;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  font-size: 1rem;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  color: rgba(0,0,0,0.38);
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  display: block;
  min-width: 0px;
  width: 100%;
  height: 1.1875rem;
  resize: none;
  overflow: auto;
  padding: 6px 0;
  opacity: 1;
}

.c1::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c1::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c1:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c1::-ms-clear {
  display: none;
}

.c1:focus {
  outline: 0;
}

.c1:invalid {
  box-shadow: none;
}

<div
  className="c0 sinoui-base-input__layout"
  data-testid="baseInput"
  disabled={true}
  onClick={[Function]}
>
  <textarea
    className="c1"
    disabled={true}
    multiline={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    style={
      Object {
        "height": 0,
      }
    }
  />
</div>
`;
